--- a/fish_exercise/index.html
+++ b/fish_exercise/index.html
@@ -21,9 +21,10 @@
     </head>
 
     <body>
-        <script src="peixe.js">
-            let answer = "";
-            console.log(answer)
+        <script src="peixe.js"></script>
+        <script>
+            let answer = "Já havia programado antes, mas nada muito profundo. Fiz apenas uns cursos do Curso em Vídeo, o grandioso  Gustavo Guanabara, em lógica de programação, Java e Programação Orientada em objetos. Por esse background, mesmo que de muito tempo atrás, o tutorial foi bem tranquilo.";
+            console.log(answer);
         </script>
     </body>
 
